# learning_platform_DRF

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
learning_platform/learning_platform/: settings.py  urls.py
learning_platform/mentorship/: admin.py  endpoinds.py  models.py  serializers.py  urls.py
learning_platform/mentorship/migrations/: 0001_create_student_model.py  0002_create_teacher_model.py  0003_create_teacher_group_model.py
learning_platform/studying/: admin.py  apps.py  endpoinds.py  models.py  serializers.py  urls.py
learning_platform/studying/migrations/: 0001_create_specification_model.py  0002_create_course_model.py  0003_create_topic_model.py  0004_create_article_image_model.py  0005_create_article_model.py
learning_platform/testing_system/: admin.py  endpoinds.py  models.py  serializers.py  urls.py
learning_platform/testing_system/migrations/: 0001_create_article_test_model.py  0002_create_article_question_model.py  0003_create_article_answer_option_model.py  0004_create_comletted_test_model.py  0005_create_comleted_article_model.py  0006_create_attempt_model.py
learning_platform/users/: admin.py  constants.py  endpoinds.py  models.py  serializers.py  tests.py  urls.py
learning_platform/users/migrations/: 0001_create_user_model.py  0002_alter_customuser_managers.py
